# DS_COVID

./: .gitattributes  .gitignore  03_analyse_visualisations_clean.py  CELL_CONFIG_STANDALONE.py  COMPREHENSIVE_CODEBASE_ANALYSIS.md  PRESENTATION_README.md  PROJECT_STRUCTURE.txt  README.md  _REFACTORING_MICROSERVICE_README.md  comprehensive_ml_pipeline_v2.ipynb  dataset_factory.py  organize_refactoring.ps1  presentation.tex  pyproject.toml  rapport.tex  requirements-colab.txt  requirements.txt  requirements_colab.txt  start_services.ps1  start_services.sh  streamlit_app.py  streamlit_test_loader.py  test_microservices.ps1  test_microservices.sh  tree_output.txt  validate_phase_1.py
.streamlit/: config.toml
DOCS_ARCHIVED/: 30_SECONDS.md  DOCUMENTATION_INDEX.md  EMERGENCY_DASHBOARD.md  HOW_TO_START_JOUR_2.md  MANIFEST.md  MICROSERVICES_README.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_DEPLOYMENT_GUIDE.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.txt  QUICK_START.md  README_PHASE_1_COMPLETE.txt  ROOT_INDEX.md  START_HERE.md
_OLD_ROOT_FILES/: ANALYSIS_SUMMARY.md  QUICK_REFERENCE.md  REFACTORING_ACTION_PLAN.md  cli.py  image_processor.py  streamlit_app.py
_REFACTORING_MICROSERVICE_/: README.md
config/: colab_config.json  default_config.json
ml-backend/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
ml-backend/src/ds_covid_backend/: __init__.py
models/: Pipeline_ML_PCA_Complete.pkl  Section_1_exploration.pkl  Section_2_preprocessing_ml.pkl  Section_3_features_pca.pkl  Section_4_features_histogram.pkl  (+5 more)
(+200 files in other folders)
